# rez-blosc

./: CMakeLists.txt  LICENSE  README.md  package.py
cmake/: FindBlosc.cmake  blosc.cmake
